...
        Row(
            verticalAlignment = Alignment.CenterVertically,
            horizontalArrangement = Arrangement.SpaceBetween,
        ) {
            TransparentBtnWithContextMenu(
                painter = painterResource(R.drawable.more_horiz),
                contentDescription = "Selection options",
                tint = MaterialTheme.colorScheme.primary,
            ) { closeMenu ->
                CustomContextMenuBtn(
                    onClick = {
                        onAddClick()
                        closeMenu()
...
        dragHandle?.let { handle ->
            IconButton(
                onClick = {},
                modifier = with(handle.scope) {
                    Modifier
                        .draggableHandle(enabled = handle.dragEnabled)
                        .testTag("DragHandle")
                },
            ) {
                Icon(
                    painter = painterResource(R.drawable.drag_handle),
                    contentDescription = "dragHandle",
                    tint = MaterialTheme.colorScheme.primary
...
