...
                TransparentBtnWithContextMenu(
                    painter = painterResource(R.drawable.more_horiz),
                    contentDescription = "Album options",
                    tint = MaterialTheme.colorScheme.onSurfaceVariant,
                    modifier = Modifier
                        .size(dimensionResource(R.dimen.icon_small))
                        .testTag("AlbumOptions")
                ) { closeMenu ->
                    CustomContextMenuBtn(
                        onClick = {
                            dialogsVm.setAddDialog(tracks = tracks) { closeMenu() }
                        },
                        painter = painterResource(R.drawable.playlist_add),
...
